--- a/gb/23/11/13/n14115711.md
+++ b/gb/23/11/13/n14115711.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>王友群：“金融虎”孙德顺贪近10亿根源何在？</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/11/id14115713-62c52dcf49012fd588617a80949_p24_mk24-800x450-600x400.png" />
 <h6>贪近10亿元的原中信银行行长孙德顺被判死缓（新唐人合成图）
 </h6>
 <hr>
-	<p>【大纪元2023年11月14日讯】11月10日，原<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E4%BF%A1%E9%93%B6%E8%A1%8C.md#1">中信银行</a>行长<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AD%99%E5%BE%B7%E9%A1%BA.md#1">孙德顺</a>，因受贿9.795亿元，被山东省济南市中级法院判处死刑，缓期二年执行，并处没收个人全部财产，在其死缓减为无期徒刑后，终身监禁，不得减刑、假释。</p>
-<h2><strong><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E4%BF%A1%E9%93%B6%E8%A1%8C.md#1">中信银行</a>是家什么银行？</strong></h2>
+	<p>【大纪元2023年11月14日讯】11月10日，原中信银行行长孙德顺，因受贿9.795亿元，被山东省济南市中级法院判处死刑，缓期二年执行，并处没收个人全部财产，在其死缓减为无期徒刑后，终身监禁，不得减刑、假释。</p>
+<h2><strong>中信银行是家什么银行？</strong></h2>
 <p>中信银行成立于1987年，总部位于北京，是中共实行“改革开放”后最早成立的新兴商业银行之一，是中共最早参与国内外金融市场融资的商业银行。</p>
 <p>2007年，中信银行在上海证券交易所和香港联合交易所A+H股同步上市，是香港中资金融股的六行三保之一。</p>
 <p>中信银行的第一大股东是中信集团，占股60%以上，处于绝对控股地位。</p>
 <p>中信集团创办人、时任中共全国人大副委员长荣毅仁，在中信银行成立时任名誉董事长。</p>
 <p>从中信银行的历史看，它是一家在国内外有重要影响的国有企业。中信银行行长是中共体制内一个非常重要的职位，不是中共高层特别信任的人，不可能担任此职务。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AD%99%E5%BE%B7%E9%A1%BA.md#1">孙德顺</a>曾在中国人民银行、中国工商银行、交通银行工作过。</p>
+<p>孙德顺曾在中国人民银行、中国工商银行、交通银行工作过。</p>
 <p>2011年10月，孙德顺调任中信银行总行党委副书记；2011年12月至2014年5月，任中信银行副行长；2014年5月至2016年7月，任中信银行常务副行长。2016年7月至2019年2月，任中信银行行长。</p>
 <h2><strong>谁提拔重用孙德顺的？</strong></h2>
 <p>中信银行行长是副部长级。中共副部长级官员的任命，必须经中央组织部考察认可后，提交中共政治局会议讨论通过。</p>
@@ -36,12 +36,12 @@
 <p>通报认定，孙德顺“严重违反”中共的政治纪律、组织纪律、廉洁纪律、工作纪律和生活纪律，构成严重职务违法并涉嫌受贿犯罪。</p>
 <p>鉴于上述情况，中纪委决定给予孙德顺开除党籍处分，取消其享受的副部长级待遇；收缴其孙违纪违法所得；并将其涉嫌犯罪问题移送检察机关审查起诉。</p>
 <h2><strong>孙德顺是怎么捞钱的？</strong></h2>
-<p>据2022年1月央视反腐专题片《零容忍》报道，孙德顺“不愿意收现金”，认为这样做“太低端”，“太简单粗暴”。他是利用“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BD%B1%E5%AD%90%E5%85%AC%E5%8F%B8.md#1">影子公司</a>”、借助金融手段捞钱的。</p>
+<p>据2022年1月央视反腐专题片《零容忍》报道，孙德顺“不愿意收现金”，认为这样做“太低端”，“太简单粗暴”。他是利用“影子公司”、借助金融手段捞钱的。</p>
 <p>一方面，孙德顺利用权力为企业老板批贷款；另一方面，这些老板有的以投资名义，将巨资注入他实际控制的平台公司，有的则送上优质投资项目或投资机会；他实际控制的平台公司用这些老板提供的资金，投入这些老板提供的项目，以钱生钱，和老板们共同获利分红。</p>
 <p>孙德顺安排他的两个老部下开设两家投资平台公司，让他们做法人代表，他做幕后老板。这两家投资平台公司是他的核心经营团队，是遮蔽在他身前的第一层“影子”。</p>
 <p>两家投资平台公司下面，又设立了10多家项目公司，作为第二层“影子”。</p>
 <p>项目公司和行贿企业不是直接交易，而是双方各自再成立空壳公司，作为第三层“影子”。</p>
-<p>孙德顺站在三层<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BD%B1%E5%AD%90%E5%85%AC%E5%8F%B8.md#1">影子公司</a>的最顶端的幕后，实际掌控着三层影子公司的交易，成交与不成交，都是他说了算。</p>
+<p>孙德顺站在三层影子公司的最顶端的幕后，实际掌控着三层影子公司的交易，成交与不成交，都是他说了算。</p>
 <p>影子公司的资金往来，则被伪装成各种貌似合法的金融产品、股权投资协议等。</p>
 <p>这样，孙德顺贷出去的巨额公款，一方面，成了那些企业老板们大搞权、钱、色交易的资本；另一方面，作为酬谢，那些企业老板们将贷款的一部分，通过三层影子公司的资金往来，返还给他，成为他的私有财产。</p>
 <h2><strong>贷40亿元获利1亿元</strong></h2>
@@ -74,43 +74,43 @@
 <p>中纪委的通报称，孙德顺在中共十八大之后“不收敛不收手”，是中共“金融领域腐败问题特别严重、性质特别恶劣、数额特别巨大的典型”。</p>
 <p>那么，中共十八大后，是谁提拔重用孙德顺的？是谁对孙德顺进行管理的？是谁对孙德顺进行监督的？</p>
 <p>负直接领导责任的有：时任中组部部长赵乐际，继任中组部部长陈希，时任中纪委书记赵乐际；负总责的，则是中共党魁习近平。</p>
-<p>在习2013年1月发动“反腐打虎”以来，在习2015年发动打“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%87%91%E8%9E%8D%E8%99%8E.md#1">金融虎</a>”以来，在一批又一批中共高官，包括“金融虎”被查办的情况下，在习近平、赵乐际、陈希的眼皮底下，孙德顺竟然贪了近10亿元，问题到底出在哪里？</p>
+<p>在习2013年1月发动“反腐打虎”以来，在习2015年发动打“金融虎”以来，在一批又一批中共高官，包括“金融虎”被查办的情况下，在习近平、赵乐际、陈希的眼皮底下，孙德顺竟然贪了近10亿元，问题到底出在哪里？</p>
 <p>绝对的权力必然导致绝对的腐败。</p>
 <p>习当局坚持“党政军学民、东西南北中，党是领导一切的”。这意味着党拥有绝对权力。党什么都管，必然什么都管不好，必然昏招迭出，腐败丛生。</p>
-<p>习杀了“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%87%91%E8%9E%8D%E8%99%8E.md#1">金融虎</a>”——原华融集团董事长<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B5%96%E5%B0%8F%E6%B0%91.md#1">赖小民</a>，又冒出一只“金融虎”——原中信银行行长孙德顺，就是明证。</p>
+<p>习杀了“金融虎”——原华融集团董事长赖小民，又冒出一只“金融虎”——原中信银行行长孙德顺，就是明证。</p>
 <p>大纪元首发</p>
 <p>责任编辑：高义</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/16/n14096695.md#1">王友群：中共即将灭亡 “三退”可保平安</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112475.md#1">王友群：1976年周恩来朱德毛泽东是怎么死的？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/10/n14113410.md#1">王友群：习近平坐在中共内斗的火山口上</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/12/n14114707.md#1">王友群：由李克强之死想到前公安部长李震之死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/16/n14096695.md#1">王友群：中共即将灭亡 “三退”可保平安</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/8/n14112475.md#1">王友群：1976年周恩来朱德毛泽东是怎么死的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/10/n14113410.md#1">王友群：习近平坐在中共内斗的火山口上</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/12/n14114707.md#1">王友群：由李克强之死想到前公安部长李震之死</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/14/n10217201.md#1" target="_blank">极限饥饿：灵与肉的双重凌迟（上）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/16/5/25/n7931386.md#1" target="_blank">生的希望</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/15/n11942777.md#1" target="_blank">掸封尘：江青“醋坛子”的能量究竟有多大</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/11/26/n3738443.md#1" target="_blank">云帆：一水之隔　云泥之别</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/6/n14110441.md#1">【未解之谜】全中！预言中国国运的马前课（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/6/n14110798.md#1">一年养生就从立冬起 补肾养藏精气</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/10/n14113379.md#1">【未解之谜】马前课（下）红朝国运大变更？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112353.md#1">很久很久以前：维多利亚时代的仙子画</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/2/n14108142.md#1">只羡鸳鸯齐升仙 书仙曹文姬传奇</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/11/n14114641.md#1">【时事军事】美国太平洋陆军的战争准备</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/11/n14114392.md#1">【全球新闻】澳洲与太平洋岛国签署安全协议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/12/n14115084.md#1">【人物真相】毛阿敏 神秘婚姻撑起的不倒歌星</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/10/n14114113.md#1">沈舟：美军还有多少航母可以调动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/11/n14114170.md#1">李克强猝死成导火索 中共各派内斗公开化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/10/n14114053.md#1">【菁英论坛】红二代向习开炮 刘源王岐山挑头</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/10/n14114058.md#1">周慧敏庆56岁生日 晒恬静自拍照泄近况</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/10/n14114024.md#1">惠英红自曝已做心脏手术 手脚轻碰满是瘀青</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/10/n14114090.md#1">100名中占65首 泰勒获选Apple Music年度艺人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/11/n14114140.md#1">《洛基》第二季影评：昔日反派彻底蜕变为真英雄</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/11/n14114425.md#1">申惠善练武展现劈腿式踢击 李濬荣曝挨打诀窍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112405.md#1">铁锅料理更健康美味 4步让铁锅变不沾锅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103525.md#1">人工营养补充剂别乱吃！成分、风险、吃法一次看</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/10/n14113571.md#1">补冬忌燥热 中医推议三食材 一穴道按摩</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/11/n14114390.md#1">日本忠犬八公百岁冥诞 游客争相与铜像合照</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/11/n14114368.md#1">美国新房建筑趋势 建商刺激销售</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/11/13/n14115711.htm">王友群：“金融虎”孙德顺贪近10亿根源何在？</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/11/13/n14115711.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/23/11/13/n14115711.htm">王友群：“金融虎”孙德顺贪近10亿根源何在？</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/11/13/n14115711.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
